public/css/index-new.css
/* ... */
.lang-box{
	margin:0px 10px 0px 20px;
	display: flex;
	flex-direction: row;
	align-items: center;
}
.lang-switch{
	color: #fff;
	font-size: 12px;
	display: flex;
	align-items: center;
	justify-content: center;
	border-radius: 3px;
	padding: 1px 5px;
}
.lang-active{
	color: #DCF754;
}
.nav-btn {
	width: 30px;
	height: 30px;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
}

.nav-btn span {
	width: 21px;
	height: 3px;
	background-color: #fff;
	display: block;
	margin-bottom: 3px;
}
.pc-nav-btn-box{
	color: #fff;
	font-size: 17px;
}
.pc-nav-btn-box a{
	margin-left: 40px;
}
.nav-btn span:last-of-type {
	margin-bottom: 0;
}

.bg-sky {
	width: 100%;
	height: 100vh;
	overflow: hidden;
	background-color: #000;
	background-image: url(/frontBg.jpg);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
	position: fixed;
	top: 0;
	left: 0;
	z-index: 11;
}

.bg-sky.z1 {
	z-index: 1;
}

.front {
	width: 100%;
	height: 100vh;
	background-color: #000;
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
	display: flex;
	align-items: center;
	justify-content: center;
	position: relative;
	z-index: 3;
	overflow: hidden;
}
.front-mask{
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0px;
	left: 0px;
	z-index: 10;
}
.stars {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	perspective: 150px;
	-webkit-perspective: 150px;
}

.stars .star {
	display: none;
	/*transition: all 3s;*/
	width: 15px;
	height: 15px;
	background-color: #DCF754;
	border-radius: 100%;
	position: absolute;
	transform-origin: center center;
	animation: star 10s ease-out both;
	opacity: 1;
	transform: translate3d(0, 0, 0);
	/*transform: scale3d(0,0,0);*/
	filter: blur(1px);
}

.star span {
	display: block;
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	transform-origin: center center;
	background-color: #DCF754;
	opacity: 1;
	border-radius: 100%;
}

.star span.s1 {
	filter: blur(2px);
	opacity: 0.5;
	/*transform: scale(2);*/
	animation: scale2 4s ease-out both;
}

.star span.s2 {
	filter: blur(6px);
	opacity: 0.9;
	/*transform: scale(8);*/
	animation: scale8 6s ease-out both;
}

@keyframes scale2 {
	100% {
		transform: scale(4);
	}
}

@keyframes scale8 {
	100% {
		transform: scale(8);
	}
}

@keyframes star {
	15% {
		opacity: 1;
	}
	to {
		transform: scale3d(0.5, 0.5, 1) translate3d(0, 0, -100px);
		opacity: 0;
	}
}

.slogan {
	width: 51px;
	position: absolute;
	text-align: center;
	display: block;
	opacity: 0;
	transition: all 0.75s;
	z-index: 11;
}

.slogan.front1 {
	width: 100%;
	height: 100%;
	background: url(/bg-front1.png) no-repeat center center;
	background-size: cover;
}

.slogan.front2 {
	width: 100%;
	height: 100%;
	background: url(/bg-front2.png) no-repeat center center;
	background-size: cover;
}

.slogan img {
	width: 70%;
	height: auto;
}

.slogan.active {
	opacity: 1;
}

.slogan-en {
	position: absolute;
	bottom: 54px;
	height: 18px;
	left: 50%;
	transform: translateX(-50%);
	opacity: 0;
	transition: opacity 0.75s;
}
.slogan-en img {
	height: 100%;
}

.slogan-en.active {
	opacity: 1;
}

.arrow-up {
	position: absolute;
	bottom: 20px;
	left: 50%;
	transform: translate3d(-50%, 0, 0);
	opacity: 0;
	animation: scrollUp 3s ease-in-out infinite;
}

.arrow-up.active {
	opacity: 1;
}

@keyframes scrollUp {
	50% {
		transform: translate3d(-50%, -10px, 0);
	}
}

.trangles {
	width: 137px;
	height: 120px;
	display: block;
	position: absolute;
	right: 52%;
	bottom: 20px;
	opacity: 0;
	/*transform-origin: 0 bottom;*/
}

.slogan.active .trangles {
	animation: rotate 0.5s ease-out both 0.25s;
}

@keyframes rotate {
	from {
		opacity: 0;
		transform: scale(0) rotate(-135deg);
	}
	to {
		opacity: 1;
		transform: scale(1) rotate(15deg);
	}
}

.trangles span {
	display: block;
	width: 100%;
	height: 100%;
	bottom: 0;
	left: 0;
	position: absolute;
	background: url(/trangle.svg) no-repeat left bottom;
	transform-origin: left bottom;
	transition: all 0.5s ease-out 1s;
}

.trangles span.trangle1 {
	opacity: 0.6;
}

.trangles span.trangle2 {
	opacity: 0.9;
}

.slogan.active .trangles span.trangle1 {
	transform: rotate(-20deg);
}
.loading-box{
	width: 100%;
	height: 100vh;
	position: absolute;
	top: 0;
	left: 0;
	background: #000;
	z-index: 1000;
	display: flex;
	align-items: center;
	justify-content: center;
}
.loading {
	width: 27px;
	height: 56px;
	/* position: absolute;
	top: 50%;
	left: 50%;
	margin: -28px 0 0 -14px;
	background: url("/statics/loading.gif") no-repeat;
	background-size: contain; */
}


@keyframes bounce {
	0% {
		-webkit-transform: translateY(0vh) scaleY(0.8) rotate(0deg);
		transform: translateY(0vh) scaleY(0.8) rotate(0deg);
	}
	25% {
		-webkit-transform: translateY(-5vh) scaleY(1.02) rotate(50deg);
		transform: translateY(-5vh) scaleY(1.02) rotate(50deg);
	}
	50% {
		-webkit-transform: translateY(-6vh) scaleY(1) rotate(60deg);
		transform: translateY(-6vh) scaleY(1) rotate(60deg);
	}
	75% {
		-webkit-transform: translateY(-5vh) scaleY(1.02) rotate(70deg);
		transform: translateY(-5vh) scaleY(1.02) rotate(70deg);
	}
	100% {
		-webkit-transform: translateY(0vh) scaleY(0.8) rotate(120deg);
		transform: translateY(0vh) scaleY(0.8) rotate(120deg);
	}
}

@keyframes toggleScale {
	50% {
		transform: scale(2);
		opacity: 1;
	}
}

.title {
	margin-bottom: 40px;
}
.about-box {
	position: relative;
}
@keyframes huxi {
	50% {
		opacity: 0.2;
	}
}

.about p {
	font-size: 14px;
	color: rgba(255,255,255,0.7);
	text-align: justify;
	line-height: 180%;
	margin-bottom: 1.5em;
	position: relative;
	z-index: 3;
}

.sub-title {
	font-size: 16px;
	color: #FFFFFF;
	text-align: justify;
	padding-top: 10px;
}

.member-list {
	/* padding-bottom: 80px; */
}

.member-list li .intro {
	display: none;
}

.avatar img {
	width: 100%;
	height: 100%;
}

.member-list li .name {
	font-size: 14px;
	color: #FFFFFF;
	text-align: center;
	line-height: 22px;
	display: block;
	width: 100%;
	height: 44px;
}
/* ... */

